5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1649_869.log
== SUBMITION (2019-04-08 23:52:58) 
-- CODE:
preco=float(input("digite o preco sem descontos:    "))
if(preco>=200):
	x=preco-preco*0.05
	print(x)
else:
	print(preco)

-- EXECUTION TIME:
0.175718
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.0855
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:53:33) 
-- CODE:
preco=float(input("digite o preco sem descontos:    "))
if(preco>=200):
	x=preco-preco*0.05
	print(x)
else:
	print(preco)

-- OUTPUT:
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:54:05) 
-- CODE:
preco=float(input("digite o preco sem descontos:    "))
if(preco>=200):
	x=preco-preco*0.05
	print(x)
else:
	print(preco)

-- OUTPUT:
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:55:08) 
-- CODE:
preco=float(input("digite o preco sem descontos:    "))
if(preco>=200):
	x=preco-preco*0.05
	print(round(x,2))
else:
	print(round(preco,2)

-- ERROR:
File "XXXX", line 7
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 23:55:08) 
-- CODE:
preco=float(input("digite o preco sem descontos:    "))
if(preco>=200):
	x=preco-preco*0.05
	print(round(x,2))
else:
	print(round(preco,2)

-- EXECUTION TIME:
0.158217
-- ERROR:
  File "/home/codebench/codes/1649/869/main.py", line 7
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 00:02:05) 
-- CODE:
preco=float(input("digite o preco sem descontos:    "))
if(preco>=200):
	x=preco-preco*0.05
	print(round(x,2))
else:
	print(round(preco,2))

-- EXECUTION TIME:
0.134264
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
